Refactored MainAppModule & Components

--- a/src/app/components/mainapp/mainapp.component.html
+++ b/src/app/components/mainapp/mainapp.component.html
@@ -1,6 +1,6 @@
 <app-sidebar
   [userName]="myData == null ? '' : myData.name"
-  [moreText]="myData == null ? '' : myData.desc"
+  [moreText]="myData == null ? '' : myData.email"
 >
   <li class="header">MAIN NAVIGATION</li>
 
