--- a/src/app/components/mainapp/myatms/myatms.component.html
+++ b/src/app/components/mainapp/myatms/myatms.component.html
@@ -7,13 +7,15 @@
   <div class="row">
     <swal
       #addSwal
-      title="Fill the form, rapidly"
+      title="Add New ATM"
       confirmButtonText="Submit"
       [showLoaderOnConfirm]="true"
       [options]="alertOption1"
       [showCloseButton]="true"
+      [background]="'#ddd'"
     >
       <form *swalPartial>
+        <br />
         <div class="form-group has-feedback">
           <label>ATM Name</label>
           <div class="input-group">
@@ -96,7 +98,13 @@
       </form>
     </swal>
 
-    <swal #detailSwal [showConfirmButton]="false" [showCloseButton]="true">
+    <swal
+      #detailSwal
+      [showConfirmButton]="false"
+      [showCloseButton]="true"
+      title="ATM Details"
+    >
+      <br />
       <div *swalPartial>
         <div class="box box-primary">
           <ul class="list-group list-group-unbordered">
@@ -144,7 +152,7 @@
               <div class="col-xs-12">
                 <button
                   (click)="deleteATM()"
-                  class="btn btn-warning btn-block btn-flat"
+                  class="btn btn-danger btn-block btn-flat"
                 >
                   DELETE ATM
                 </button>
@@ -200,37 +208,37 @@
               </tr>
             </thead>
             <tbody>
-            <tr *ngFor="let atm of atmData.data">
-              <td>
-                <a
-                  [swal]="detailSwal"
-                  (click)="this.selectedATM = atm"
-                  style="cursor: pointer;"
-                  >{{ atm.name }}</a
-                >
-              </td>
-              <td>{{ atm.city }}</td>
-              <td>{{ atm.coordinate.lat }} , {{ atm.coordinate.lng }}</td>
-              <td>
-                <span
-                  class="label"
-                  [class.label-success]="atm.status == 0"
-                  [class.label-warning]="atm.status == 1"
-                  [class.label-danger]="atm.status == 2"
-                ></span>
-                <span *ngIf="atm.status === 1">Online</span>
-                <span *ngIf="atm.status === 0">Out Of Cash</span>
-                <span *ngIf="atm.status === -1">Offline</span>
-              </td>
-              <td>
-                <app-switch
-                  #switch
-                  class="center"
-                  [isChecked]="atm.status == 0 || atm.status == 1"
-                  (ontoggled)="toggle($event, atm.id)"
-                ></app-switch>
-              </td>
-            </tr>
+              <tr *ngFor="let atm of atmData.data">
+                <td>
+                  <a
+                    [swal]="detailSwal"
+                    (click)="this.selectedATM = atm"
+                    style="cursor: pointer;"
+                    >{{ atm.name }}</a
+                  >
+                </td>
+                <td>{{ atm.city }}</td>
+                <td>{{ atm.coordinate.lat }} , {{ atm.coordinate.lng }}</td>
+                <td>
+                  <span
+                    class="label"
+                    [class.label-success]="atm.status == 0"
+                    [class.label-warning]="atm.status == 1"
+                    [class.label-danger]="atm.status == 2"
+                  ></span>
+                  <span *ngIf="atm.status === 1">Online</span>
+                  <span *ngIf="atm.status === 0">Out Of Cash</span>
+                  <span *ngIf="atm.status === -1">Offline</span>
+                </td>
+                <td>
+                  <app-switch
+                    #switch
+                    class="center"
+                    [isChecked]="atm.status == 0 || atm.status == 1"
+                    (ontoggled)="toggle($event, atm.id)"
+                  ></app-switch>
+                </td>
+              </tr>
             </tbody>
           </table>
         </div>
