Added DevConsole Toggle to Titlebar

--- a/src/app/components/widgets/titlebar/titlebar.component.html
+++ b/src/app/components/widgets/titlebar/titlebar.component.html
@@ -16,6 +16,10 @@
 
   <div class="window-controls">
 
+    <button title="Open Developer Console" (click)="openDevConsole()">
+      <span style="width: 15px; height: 20px;"><i class="fa fa-code"></i> </span>
+    </button>
+
     <button title="Minimize" (click)="minimize()">
       <svg aria-hidden="true" version="1.1" width="10" height="10">
         <path d="M 0,5 10,5 10,6 0,6 Z"></path>
