--- a/src/app/components/mainapp/managers/managers.component.html
+++ b/src/app/components/mainapp/managers/managers.component.html
@@ -90,6 +90,7 @@
     >
       <br />
       <div *swalPartial>
+        <br/>
         <div class="box box-primary">
           <ul class="list-group list-group-unbordered">
             <li class="list-group-item">
@@ -112,7 +113,7 @@
             </li>
 
             <div class="row">
-              <!-- /.col -->
+              <br/>
               <div class="col-xs-12">
                 <button
                   (click)="deleteManager()"
@@ -178,7 +179,7 @@
                     (click)="this.selectedManager = manager"
                     class="product-title"
                     >{{ manager.name }}
-                    <span class="label label-warning pull-right">$1800</span></a
+                    <span class="label label-success pull-right" *ngIf="false">$1800</span></a
                   >
                   <span class="product-description">
                     {{ manager.email }}
